--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -6,3 +6,11 @@
     margin: 0px 0px 30px 0px;
 }
 
+.container {
+    background-image: url("../../assets/background_main/cam-adams-235137.jpg");
+    background-size: 1000px;
+    background-repeat: no-repeat;
+    height: 1000px;
+    width: 1000px;
+}
+
