--- a/src/app/game-mode/game-mode.component.html
+++ b/src/app/game-mode/game-mode.component.html
@@ -1,7 +1,10 @@
+<video #myVideo id="myVideo" width="100%" height="90%" preload autoplay loop muted></video>
+<button class = "btn btn-primary" (click) = "startVideo()">Start video feed</button>
+
 <div class="row">
   <div class="col-md-12">
     <div class="hit-box-container col-md-6 col-lg-6 col-sm-6 col-xs-6">
-      <img src="http://spencermortensen.com/articles/bezier-circle/images/bezier-circle-big.jpg"
+      <img src="http://www.pngmart.com/files/3/Cool-Designs-PNG-Clipart.png"
            class="img img-responsive hit-box">
     </div>
     <div class="hit-box-container col-md-6 col-lg-6 col-sm-6 col-xs-6">
@@ -13,12 +16,24 @@
 <div class="row">
   <div class="col-md-12">
     <div class="hit-box-container col-md-6 col-lg-6 col-sm-6 col-xs-6">
-      <img src="http://spencermortensen.com/articles/bezier-circle/images/bezier-circle-big.jpg"
+      <img src="https://www.google.com/search?q=.png+circle&source=lnms&tbm=isch&sa=X&ved=0ahUKEwig3sji_uXYAhVS7WMKHTuVAagQ_AUICigB&biw=1242&bih=648#imgrc=qIKiy_n2UPGiTM:"
            class="img img-responsive hit-box">
     </div>
     <div class="hit-box-container col-md-6 col-lg-6 col-sm-6 col-xs-6">
-      <img id="img-right" src="http://spencermortensen.com/articles/bezier-circle/images/bezier-circle-big.jpg"
+      <img id="img-right" src="https://www.google.com/search?q=.png+circle&source=lnms&tbm=isch&sa=X&ved=0ahUKEwig3sji_uXYAhVS7WMKHTuVAagQ_AUICigB&biw=1242&bih=648#imgrc=qIKiy_n2UPGiTM:"
            class="img img-responsive hit-box">
     </div>
   </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="hit-box-container col-md-6 col-lg-6 col-sm-6 col-xs-6">
+            <img src="https://www.google.com/search?q=.png+circle&source=lnms&tbm=isch&sa=X&ved=0ahUKEwig3sji_uXYAhVS7WMKHTuVAagQ_AUICigB&biw=1242&bih=648#imgrc=qIKiy_n2UPGiTM:"
+                 class="img img-responsive hit-box">
+        </div>
+        <div class="hit-box-container col-md-6 col-lg-6 col-sm-6 col-xs-6">
+            <img id="img-right" src="https://www.google.com/search?q=.png+circle&source=lnms&tbm=isch&sa=X&ved=0ahUKEwig3sji_uXYAhVS7WMKHTuVAagQ_AUICigB&biw=1242&bih=648#imgrc=qIKiy_n2UPGiTM:"
+                 class="img img-responsive hit-box">
+        </div>
+    </div>
 </div>
