--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -7,10 +7,8 @@
 }
 
 .container {
-    background-image: url("../../assets/background_main/cam-adams-235137.jpg");
-    background-size: 1000px;
-    background-repeat: no-repeat;
-    height: 1000px;
-    width: 1000px;
+    background: url("../../assets/background_main/cam-adams-235137.jpg") no-repeat center center fixed;
+    background-size: cover;
+
 }
 
