--- a/src/app/game-mode/game-mode.component.css
+++ b/src/app/game-mode/game-mode.component.css
@@ -1,17 +1,20 @@
 .hit-box{
-    width: 30%;
+    width: 35%;
+    margin-left: 30%;
 }
 
 .img {
-    float: left;
-    margin-top: 0px;
+
+}
+
+.hit-box-upper{
     margin: auto;
+    margin-top: -70%;
+}
+.hit-box-lower{
+    margin: -25% 0% 0% 0%;
 }
 
-#img-right{
-    margin-left: 40%;
-}
+.hit-box-left-lower {
 
-.hit-box-container{
-    margin-top: -800px;
 }
