--- a/src/app/game-mode/game-mode.component.css
+++ b/src/app/game-mode/game-mode.component.css
@@ -1,6 +1,6 @@
 .hit-box{
     width: 35%;
-    margin-left: 30%;
+    margin-left: 33%;
 }
 
 .img {
@@ -9,12 +9,16 @@
 
 .hit-box-upper{
     margin: auto;
-    margin-top: -70%;
+    margin-top: -65%;
 }
 .hit-box-lower{
-    margin: -25% 0% 0% 0%;
+    margin: -30% 0% 0% 0%;
 }
 
 .hit-box-left-lower {
+    margin-left: 15% !important;
+}
 
+.hit-box-right-lower {
+    margin-left: 55% !important;
 }
