--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .container {
 	
-    background: url("../assets/background_main/MainPage.png") no-repeat center center fixed;
+    background: url("../assets/background_main/MainPage.png") no-repeat center;
     height: 1000px;
     width: 100%;
     background-size: cover;
