--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,9 +1,10 @@
 <div class="container" xmlns="">
   <h1 class="text-center title">{{title}}</h1>
-  <div class="list-group">
-  <button class="list-group-item list-group-item-action" type="button">Play BeatBop!</button>
-  <button class="list-group-item list-group-item-action" type="button">Make song with body</button>
-  <button class="list-group-item list-group-item-action" type="button">User Settings</button>
+  <div class="col-md-3"></div>
+  <div class="col-md-6 menuContainer">
+    <ul class="list-group" *ngFor="let menuItem of menuItems; let count = index">
+      <a routerLink='{{routes[count]}}'><li class="list-group-item text-center menuItem">{{menuItem}}</li></a>
+    </ul>
   </div>
   <div class="col-md-3"></div>
 </div>
