--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -3,8 +3,11 @@
   <div class="col-md-3"></div>
   <div class="col-md-6 menuContainer">
     <ul class="list-group" *ngFor="let menuItem of menuItems; let count = index">
-      <a routerLink='{{routes[count]}}'><li class="list-group-item text-center menuItem">{{menuItem}}</li></a>
+      <a routerLink='{{routes[count]}}' (click)="buttonplay()"><li class="list-group-item text-center menuItem">{{menuItem}}</li></a>
     </ul>
   </div>
   <div class="col-md-3"></div>
 </div>
+<!--audio>
+  <source src="../assets/audio/Famoush.wav"></source>
+</audio-->
