--- a/src/app/game-mode/game-mode.component.html
+++ b/src/app/game-mode/game-mode.component.html
@@ -1,7 +1,7 @@
 <video #myVideo id="myVideo" width="100%" height="90%" preload autoplay loop muted></video>
 <div class="row">
     <div class="col-md-6 hit-box-upper">
-        <img class="img img-responsive hit-box-left-upper hit-box" src="{{ cdnEndpoint + hitBoxImages[0] }}">
+        <img #upperLeft class="img img-responsive hit-box-left-upper hit-box" src="{{ cdnEndpoint + hitBoxImages[0] }}">
     </div>
     <div class="col-md-6 hit-box-upper">
         <img class="img img-responsive hit-box-right-upper hit-box" src="{{ cdnEndpoint + hitBoxImages[0] }}">
@@ -15,4 +15,9 @@
         <img class="img img-responsive hit-box-right-lower hit-box" src="{{ cdnEndpoint + hitBoxImages[0] }}">
     </div>
 </div>
+<button class = "btn btn-success">Play</button>
+<button class = "btn btn-primary" (click) = "playSoundZero()">Sound 0</button>
+<button class = "btn btn-primary" (click) = "playSoundOne()">Sound 1</button>
+<button class = "btn btn-primary" (click) = "playSoundTwo()">Sound 2</button>
+<button class = "btn btn-primary" (click) = "playSoundThree()">Sound 3</button>
 
