--- a/src/app/option-menu/option-menu.component.html
+++ b/src/app/option-menu/option-menu.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-3"></div>
     <div class="col-md-6 menuContainer">
       <ul class="list-group" *ngFor="let menuItem of menuItems; let count = index">
-        <a routerLink='{{routes[count]}}' (click)="backtrack_highlighted()"><li class="list-group-item text-center menuItem">{{menuItem}}</li></a>
+        <a routerLink='{{routes[count]}}' (click)="backtrack_highlighted()"><li class="list-group-item text-center menuItem" src="https://placehold.it/50">{{menuItem}}</li></a>
       </ul>
     </div>
     <div class="col-md-3"></div>
