--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,13 +1,9 @@
-<div class="container" xmlns="">
-  <h1 class="text-center title">{{title}}</h1>
-  <div class="col-md-3"></div>
-  <div class="col-md-6 menuContainer">
-    <ul class="list-group" *ngFor="let menuItem of menuItems; let count = index">
-      <a routerLink='{{routes[count]}}' (click)="buttonplay()"><li class="list-group-item text-center menuItem">{{menuItem}}</li></a>
-    </ul>
-  </div>
-  <div class="col-md-3"></div>
-</div>
+<div class="containerCustom">
+ <div class="col-md-12">
+   <a routerLink="/Options">
+    <img src="https://s3-us-west-1.amazonaws.com/att-hackathon-beat-bop/Desktop+HD+Copy+7.png" class="img img-responsive">
+  </a>
+ </div>
 <!--audio>
-  <source src="../assets/audio/Famoush.wav"></source>
+ <source src="../assets/audio/Famoush.wav"></source>
 </audio-->
