--- a/src/app/option-menu/option-menu.component.html
+++ b/src/app/option-menu/option-menu.component.html
@@ -1,12 +1,3 @@
-<div class="optionContainer" xmlns="">
-    <h1 class="text-center title">{{title}}</h1>
-    <div class="col-md-3"></div>
-    <div class="col-md-6 menuContainer">
-      <<div class="btn-group-vertical">
-          <button type="button" class="btn btn-primary">Apple</button>
-          <button type="button" class="btn btn-primary">Samsung</button>
-          <button type="button" class="btn btn-primary">Sony</button>
-        </div>
-    </div>
-    <div class="col-md-3"></div>
-  </div>
+<div class="col-md-12">
+  <a routerLink="/Play"><img src="https://s3-us-west-1.amazonaws.com/att-hackathon-beat-bop/hip-hop-drum.png" class="img img-responsive"></a>
+</div>
